--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
 		"psr-4":{
 			"Controllers\\":"Controllers/",
 			"Models\\":"Models/",
-			"Core\\":"Core/"
+			"Core\\":"Core/",
+                        "Pdo\\":"Pdo/"
 		}
 	}
 }
